fix: subtitle letter spacing

--- a/src/styles/sections/title-section.scss
+++ b/src/styles/sections/title-section.scss
@@ -1,4 +1,5 @@
 @use 'src/styles/utils' as *;
+@use 'src/styles/general/fonts' as *;
 
 .title-section {
   .container {
@@ -8,8 +9,8 @@
   }
 
   &__subtitle {
-    font: var(--font-h6);
-    margin-bottom: 8px;
+    @include font-h6;
+    margin-bottom: fluid(8px);
     text-transform: uppercase;
   }
 }
